cabal-version:   3.0
name:            servant-example
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

common commons
    import:           warnings
    default-language: Haskell2010
    build-depends:
       base,
       servant,
       servant-server,
       transformers,
       aeson,
       text,
       wai,
       warp

library 
    import: commons
    hs-source-dirs:   src
    exposed-modules:  Server

executable main
    import: commons
    hs-source-dirs:   exe
    main-is: Main.hs
    build-depends:
        servant-example
