cabal-version:   3.0
name:            servant-example
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common language
    ghc-options: -Wall -Wcompat -Wno-unticked-promoted-constructors

    default-language: Haskell2010

    default-extensions: DataKinds
                        DeriveGeneric
                        LambdaCase
                        OverloadedStrings
                        TypeOperators

common commons
    import:           language
    build-depends:
       base,
       servant,
       servant-server,
       transformers,
       aeson,
       text,
       wai,
       warp

library 
    import: commons
    hs-source-dirs:   src
    exposed-modules:  Server

executable main
    import: commons
    hs-source-dirs:   exe
    main-is: Main.hs
    build-depends:
        servant-example
